server/k8s/guap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guap
  namespace: tomsther
spec:
  selector:
    matchLabels:
      app: guap-label
  replicas: 1
  template:
    metadata:
      labels:
        app: guap-label
    spec:
      containers:
        - name: guap
          image: mitrakov/guap
          imagePullPolicy: Always
          ports:
            - name: guap-port
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 300Mi
