server/k8s/guap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guap-service
  namespace: tomsther
  labels:
    app: guap-label
spec:
  type: ClusterIP
  selector:
    app: guap-label
  ports:
    - name: guap-port
      protocol: TCP
      port: 80
      targetPort: 8080
