server/k8s/postgres-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-external
  namespace: tomsther
  labels:
    app: postgres-label
spec:
  type: NodePort
  ports:
    - name: postgres-ext
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31432
  selector:
    app: postgres-label
