server/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: tomsther
  labels:
    app: postgres-label
spec:
  type: ClusterIP
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-label
