server/k8s/winesaps-web-ingress.yaml
## This is a copy of winesaps ingress. Do not edit.

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: winesaps-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - mitrakoff.com
    secretName: tls-secret
  - hosts:
    - wiki.mitrakoff.com
    secretName: tls-secret-wiki
  - hosts:
    - guap.mitrakoff.com
    secretName: tls-secret-guap
  rules:
    - host: mitrakoff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: winesaps-web-service
              servicePort: 80
    - host: wiki.mitrakoff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: wiki-service
              servicePort: 80
    - host: guap.mitrakoff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: guap-service
              servicePort: 80
